tests/NormalTests/paczka1/small_fuzzy/53220774.err
Error in line 1: FPxi5byR A958 52,6
Error in line 6: dB0C A958 19,2
Error in line 7: fsy2Izhgf S949 11,2
